test/spec_vectors/simd_bitwise/fail/module_4.wat
(module (func (result v128) (v128.and (i32.const 0) (i32.const 0))))